--- a/pricing.html
+++ b/pricing.html
@@ -10,6 +10,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         :root {
             --color-primary-red: #FF0000; /* Pure Red - commonly used for vibrant logos */
@@ -49,7 +52,7 @@
             color: var(--color-primary-red);
         }
         .ohdibs-logo {
-            height: 134px; /* Adjusted from 67px to 134px (2x larger) */
+            height: 134px; /* Adjusted to 134px */
             width: auto;
         }
         /* Mobile navigation specific styles */
@@ -97,6 +100,7 @@
                 <li><a href="index.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Home</a></li>
                 <li><a href="features.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Features</a></li>
                 <li><a href="pricing.html" class="text-white font-medium transition duration-200">Pricing</a></li>
+                <li><a href="order-form-page.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Order</a></li> <!-- Added Order link -->
                 <li><a href="faq.html" class="text-white hover:text-gray-200 font-medium transition duration-200">FAQ</a></li>
                 <li><a href="contact-page.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Contact</a></li>
             </ul>
@@ -110,6 +114,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="features.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="order-form-page.html">Order</a></li> <!-- Added Order link to mobile menu -->
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="contact-page.html">Contact</a></li>
         </ul>
