--- a/contact-page.html
+++ b/contact-page.html
@@ -10,6 +10,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         :root {
             --color-primary-red: #FF0000; /* Pure Red - commonly used for vibrant logos */
@@ -45,35 +48,76 @@
             box-shadow: 0 0 0 3px rgba(220, 38, 38, 0.2); /* Red 700 with opacity */
         }
         .ohdibs-logo {
-            height: 120px; /* Adjusted from 40px to 120px (3x larger) */
+            height: 134px; /* Adjusted to 134px */
             width: auto;
+        }
+        /* Mobile navigation specific styles */
+        .mobile-menu {
+            display: none; /* Hidden by default */
+            flex-direction: column;
+            width: 100%;
+            background-color: var(--color-dark-red);
+            position: absolute;
+            top: 100%; /* Position below the header */
+            left: 0;
+            z-index: 10;
+            padding: 1rem 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .mobile-menu.active {
+            display: flex;
+        }
+        .mobile-menu li {
+            text-align: center;
+            padding: 0.75rem 0;
+        }
+        .mobile-menu a {
+            color: white;
+            font-weight: 500;
+            display: block;
+            padding: 0.5rem 1rem;
+        }
+        .mobile-menu a:hover {
+            background-color: rgba(255, 255, 255, 0.1);
         }
     </style>
 </head>
 <body class="antialiased">
 
     <!-- Header Section -->
-    <header class="bg-[#FF0000] shadow-sm py-4">
+    <header class="bg-[#FF0000] shadow-sm py-4 relative">
         <nav class="container mx-auto px-4 flex justify-between items-center">
             <div class="p-2 flex items-center">
-                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo mr-4">
+                <a href="index.html"> <!-- Link to home page for logo -->
+                    <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo mr-4">
+                </a>
                 <div class="text-white text-sm md:text-base">
                     <a href="tel:8507643427" class="block hover:text-gray-200 transition duration-200">(850) 764-3427</a>
                     <a href="mailto:info@OHDibs.com" class="block hover:text-gray-200 transition duration-200">info@OHDibs.com</a>
                 </div>
             </div>
-            <ul class="hidden md:flex space-x-6">
+            <ul id="desktop-nav" class="hidden md:flex space-x-6">
                 <li><a href="index.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Home</a></li>
                 <li><a href="features.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Features</a></li>
                 <li><a href="pricing.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Pricing</a></li>
+                <li><a href="order-form-page.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Order</a></li> <!-- Added Order link -->
                 <li><a href="faq.html" class="text-white hover:text-gray-200 font-medium transition duration-200">FAQ</a></li>
                 <li><a href="contact-page.html" class="text-white font-medium transition duration-200">Contact</a></li>
             </ul>
             <!-- Mobile Menu Button (Hamburger) -->
-            <button class="md:hidden text-white focus:outline-none">
+            <button id="mobile-menu-button" class="md:hidden text-white focus:outline-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </button>
         </nav>
+        <!-- Mobile Menu (Hidden by default) -->
+        <ul id="mobile-menu" class="mobile-menu md:hidden">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="order-form-page.html">Order</a></li> <!-- Added Order link to mobile menu -->
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="contact-page.html">Contact</a></li>
+        </ul>
     </header>
 
     <!-- Contact Section -->
@@ -111,7 +155,7 @@
     </section>
 
     <!-- Footer Section -->
-    <footer class="bg-gray-800 text-gray-300 py-8">
+    <footer class="bg-gray-800 text-gray-300 py-8 mt-auto">
         <div class="container mx-auto px-4 text-center md:flex md:justify-between md:items-center">
             <div class="mb-4 md:mb-0">
                 &copy; 2025 OH Dibs. All rights reserved.
@@ -119,9 +163,18 @@
             <div class="flex justify-center space-x-6">
                 <a href="#" class="hover:text-white transition duration-200">Privacy Policy</a>
                 <a href="#" class="hover:text-white transition duration-200">Terms of Service</a>
+                <a href="tel:8507643427" class="hover:text-white transition duration-200">(850) 764-3427</a>
+                <a href="mailto:info@OHDibs.com" class="hover:text-white transition duration-200">info@OHDibs.com</a>
             </div>
         </div>
     </footer>
 
+    <script>
+        // JavaScript for mobile menu toggle
+        document.getElementById('mobile-menu-button').addEventListener('click', function() {
+            const mobileMenu = document.getElementById('mobile-menu');
+            mobileMenu.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
